bynkc/tests/fixtures/negative/293_match_literal_duplicate_arm/input.bynk
commons demo {
  fn f(x: Int) -> Int {
    match x {
      1 => 10
      1 => 20
      _ => 0
    }
  }
}
